# runekit

./: .gitignore  Makefile  build_run.sh  install.sh  pyproject.toml  run.sh
deploy/: com.runekit.RuneKit.appdata.xml
runekit/: main.py
runekit/app/view/: browser_window.py
runekit/browser/: alt1.js  api.py  profile.py
runekit/game/: instance.py  overlay.py
runekit/game/x11/: instance.py  manager.py
runekit/ui/: windowframe.py
