[tool.poetry]
name = "runekit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL"
include = ["runekit/_resources.py"]

[tool.poetry.dependencies]
python = "^3.12,<3.15"
requests = "^2.26.0"
PySide6 = "^6.11.1"
Pillow = "^12.2.0"
sysv-ipc = [{ version="^1.1.0", platform="linux" }]
xcffib = [{ version="^1.12.0", platform="linux" }]
pyobjc-framework-Quartz = [{ version="7.3", platform="darwin" }]
pyobjc-framework-ApplicationServices = [{ version="7.3", platform="darwin" }]
pyobjc-framework-CoreText = [{ version="7.3", platform="darwin" }]
click = "^8.0.1"
psutil = "^7.2.2"
opencv-python-headless = "^4.5.3.56"

[tool.poetry.dev-dependencies]
pyinstaller = [{ version="^4.5.1", platform="darwin" }]

[tool.poetry.scripts]
runekit = 'runekit.main:main'
